Fix alignment of rows. Especially when no button

--- a/public/css/pages/manage-users.css
+++ b/public/css/pages/manage-users.css
@@ -52,6 +52,8 @@
   text-align: left;
   vertical-align: middle;
   border-bottom: 1px solid #f2f2f2;
+  height: 7rem;
+  line-height: 1.5;
 }
 
 .table th {
